2020-04-01  Russell Almond  <ralmond@Cherry>

	* R/BNNetica.R: Added warning when replacing network.

2020-03-14  Russell Almond  <ralmond@Cherry>

	* R/Warehouse.R (WarehouseFree(BNWarehouse)): Added list argument
	to rm.

2020-03-08  Russell Almond  <ralmond@Cherry>

	* R/Warehouse.R
	(WarehouseCopy,is.legal.name,as.legal.name,is.valid): Added.

2020-02-12  Rusell Almond  <ralmond@Cherry>

	* R/Warehouse.R: WarehouseFree now actually deletes the network.
	ClearWarehouse also deletes all the nets.
	

2019-07-29  Rusell Almond  <ralmond@Cherry>

	* R/Warehouse.R (WarehouseManifest<-): Added trimws to key columsn.

	* R/PnetNetica.R (MakePnet.NeticaBN): Added some trimws.
	(MakePnode.NeticaNode): Added some trimws.

2018-11-04  Rusell Almond  <ralmond@Cherry>

	* R/PnetNetica.R (## calcPnetLL.NeticaBN): Changed to get session
	from network.
	(## calcExpTables.NeticaBN): Same thing.
	(as.Pnode.NeticaNode): Changed to use "pnodes" node set.

2016-05-04  Almond  <ralmond@macox.com>

	* R/BNNetica.R : Added translations for basic BN functions here.

2015-06-06  Russell G. Almond  <ralmond@Limu>

	* R/PnetNetica.R (Pnode.default, as.Pnode.NeticaNode): Added
	constructors. 
	(as.Pnet.NeticaBN): Added constructors.
	("PnetPnodes<-".NeticaBN): Added setter.

2015-06-05  Russell G. Almond  <ralmond@Limu>

	* R/PnetNetica.R (PnetPriorWeight.NeticaBN)
	(PnodeRules.NeticaNode, PnodeLink.NeticaNode)
	("PnodeLink<-.NeticaNode", PnodeQ.NeticaNode)
	(PnodeLnAlphas.NeticaNode, PnodeBetas.NeticaNode)
	(PnodeLinkScale.NeticaNode, PnodePriorWeight.NeticaNode): Reworked
	to use NodeUserObj/NetworkUserObj

2015-05-19  Russell G. Almond  <ralmond@Limu>

	* R/PnetNetica.R ("PnodeQ<-.NeticaNode", PnodeQ.NeticaNode): Added.
	(maxCPTParam.NeticaNode, BuildTable.NeticaNode): Added Q.

	* DESCRIPTION (Depends): Broke off from Peanut

2015-03-04  Russell G. Almond  <ralmond@Limu>

	* DESCRIPTION (Package): Created.

2015-03-04  Russell G. Almond  <ralmond@Limu>
