@@ -1,6 +1,6 @@
 Package: PNetica
-Version: 0.8-4
-Date: 2020/06/11
+Version: 0.8-5
+Date: 2020/08/08
 Title: Parameterized Bayesian Networks Netica Interface
 Author: Russell Almond
 Maintainer: Russell Almond <ralmond@fsu.edu>
